--- a/extension_crawl/popup.html
+++ b/extension_crawl/popup.html
@@ -49,7 +49,8 @@
   <!-- 각 콤보박스 초기화 -->
   <label for="col01"> 1</label>
   <select id="col01">
-      <option  value="orderNumber" selected>주문번호</option>
+      <option  value="tabaoID" selected>ID</option>
+      <option  value="orderNumber">주문번호</option>
       <option  value="orderDate">주문일자</option>
       <option  value="productName">상품명</option>
       <option  value="optionValue">옵션순서</option>
@@ -65,8 +66,9 @@
 
   <label for="col02"> 2</label>
   <select id="col02">
-    <option  value="orderNumber">주문번호</option>
-    <option  value="orderDate" selected>주문일자</option>
+    <option  value="tabaoID">ID</option>
+    <option  value="orderNumber" selected>주문번호</option>
+    <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
     <option  value="optionValue">옵션순서</option>
     <option  value="color">색상</option>
@@ -81,9 +83,10 @@
   <br>
   <label for="col03"> 3</label>
   <select id="col03">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
-    <option  value="orderDate">주문일자</option>
-    <option  value="productName" selected>상품명</option>
+    <option  value="orderDate" selected>주문일자</option>
+    <option  value="productName">상품명</option>
     <option  value="optionValue">옵션순서</option>
     <option  value="color">색상</option>
     <option  value="size">사이즈</option>
@@ -97,6 +100,24 @@
 
   <label for="col04"> 4</label>
   <select id="col04">
+    <option  value="tabaoID">ID</option>
+    <option  value="orderNumber">주문번호</option>
+    <option  value="orderDate">주문일자</option>
+    <option  value="productName" selected>상품명</option>
+    <option  value="optionValue">옵션순서</option>
+    <option  value="color">색상</option>
+    <option  value="size">사이즈</option>
+    <option  value="quantityValue">수량</option>
+    <option  value="priceValue">단가</option>
+    <option  value="imageUrl">이미지 URL</option>
+    <option  value="productUrl">상품 URL</option>
+    <option  value="postCompany">운송사</option>
+    <option  value="trackingNumber">Tracking#</option>
+  </select>
+  <br>
+  <label for="col05"> 5</label>
+  <select id="col05">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -110,9 +131,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-  <br>
-  <label for="col05"> 5</label>
-  <select id="col05">
+
+  <label for="col06"> 6</label>
+  <select id="col06">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -126,9 +148,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-
-  <label for="col06"> 6</label>
-  <select id="col06">
+  <br>
+  <label for="col07">  7</label>
+  <select id="col07">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -142,9 +165,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-  <br>
-  <label for="col07">  7</label>
-  <select id="col07">
+
+  <label for="col08">  8</label>
+  <select id="col08">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -158,9 +182,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-
-  <label for="col08">  8</label>
-  <select id="col08">
+  <br>
+  <label for="col09">  9</label>
+  <select id="col09">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -174,9 +199,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-  <br>
-  <label for="col09">  9</label>
-  <select id="col09">
+
+  <label for="col10">10</label>
+  <select id="col10">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -190,9 +216,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-
-  <label for="col10">10</label>
-  <select id="col10">
+  <br>
+  <label for="col11">11</label>
+  <select id="col11">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -206,9 +233,10 @@
     <option  value="postCompany">운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-  <br>
-  <label for="col11">11</label>
-  <select id="col11">
+
+  <label for="col12">12</label>
+  <select id="col12">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
@@ -222,9 +250,9 @@
     <option  value="postCompany" selected>운송사</option>
     <option  value="trackingNumber">Tracking#</option>
   </select>
-
-  <label for="col12">12</label>
-  <select id="col12">
+  <label for="col13">13</label>
+  <select id="col13">
+    <option  value="tabaoID">ID</option>
     <option  value="orderNumber">주문번호</option>
     <option  value="orderDate">주문일자</option>
     <option  value="productName">상품명</option>
