--- a/extension_crawl/popup.html
+++ b/extension_crawl/popup.html
@@ -269,6 +269,7 @@
   <br>
   <button id="saveBtn">저장</button>
   <button id="crawlBtn">Crawl Page</button>
+  <button id="readClipboardBtn">클립보드 읽기</button>
   <script src="popup.js"></script>
 </body>
 </html>
